grammar.txt
program ::= {statement}
statement ::= "print" (expression | string) nl
    | "when" comparison "then" nl {statement} "endwhen" nl
    | "loop" comparison "repeat" nl {statement} "endloop" nl
    | "label" identifier nl
    | "goto" identifier nl
    | "let" identifier "=" expression nl
    | "input" identifier nl
comparison ::= expression (("==" | "!=" | ">" | ">=" | "<" | "<=") expression)
expression ::= term {( "-" | "+" ) term}
term ::= unary {( "/" | "*" ) unary}
unary ::= ["+" | "-"] primary
primary ::= number | identifier
nl ::= '\n'+
